# notes

./: .gitignore  README.md  add.py  delete.py  main.py  notes.db  search.py  see.py  setup.cfg  setup.py  status_results.txt  table_creator.py  update.py
notes/: all.py  apagar.py  delete.py  diagnostics.py  nall.py  old_search.py  search.py  test.py  update.py
notes/add/: add.py  mkd.md  similar_tags.py  tag_lst.py
notes/docs/: conf.py  index.rst  see_all_database.rst
notes/docs/_build/doctrees/: environment.pickle  index.doctree  see_all_database.doctree
notes/docs/_build/html/: .buildinfo  genindex.html  index.html  index.txt  objects.inv  py-modindex.html  search.html  searchindex.js  see_all_database.html
notes/docs/_build/html/.doctrees/: environment.pickle  see_all_database.doctree
notes/docs/_build/html/_modules/: index.html
notes/docs/_build/text/: index.txt  see_all_database.txt
notes/notes/: 1.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  103.txt  1030.txt  1031.txt  1032.txt  1033.txt  1034.txt  1035.txt  (+438 more)
notes_mclds/: add.py  delete.py  favorites.py  main.py  result.profile  search.py  search_bkmks.py  see.py  see_favorites.py  stats.py  table_creator.py  update.py
tag_management/: clean_tag_list.py  new_msg.py  tag_mgt.md
(+2 files in other folders)
